# discord-emote-picker

./: Cargo.toml
src/: main.rs
